# Williamson-Encoder

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md
benchmarks/: RESULTS.md
docs/: FORMAT.md  HISTORY.md
lexicon/: README.md
python/: __init__.py  requirements.txt  williamson.py
rust/: Cargo.toml
rust/src/: bench.rs  decode.rs  encode.rs  interner.rs  lib.rs  loader_v92.rs  main.rs  template.rs  tokenize.rs  trie.rs
